--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
+    "jquery-toast-plugin": "^1.3.2",
     "socket.io": "^2.1.0"
   },
   "devDependencies": {
