--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "content": "CC­BY­NC­SA 4.0"
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "jquery": "^3.3.1",
     "jquery-toast-plugin": "^1.3.2",
     "socket.io": "^2.1.0"
